tests/baselines/reference/exportStar-amd.errors.txt
error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
main.ts(1,8): error TS1192: Module '"t4"' has no default export.
t4.ts(3,1): error TS2308: Module "./t1" has already exported a member named 'x'. Consider explicitly re-exporting to resolve the ambiguity.
t4.ts(3,1): error TS2308: Module "./t1" has already exported a member named 'y'. Consider explicitly re-exporting to resolve the ambiguity.


!!! error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== t1.ts (0 errors) ====
    export var x = 1;
    export var y = 2;
    
==== t2.ts (0 errors) ====
    export default "hello";
    export function foo() { }
    
==== t3.ts (0 errors) ====
    var x = "x";
    var y = "y";
    var z = "z";
    export { x, y, z };
    
==== t4.ts (2 errors) ====
    export * from "./t1";
    export * from "./t2";
    export * from "./t3";
    ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2308: Module "./t1" has already exported a member named 'x'. Consider explicitly re-exporting to resolve the ambiguity.
    ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2308: Module "./t1" has already exported a member named 'y'. Consider explicitly re-exporting to resolve the ambiguity.
    
==== main.ts (1 errors) ====
    import hello, { x, y, z, foo } from "./t4";
           ~~~~~
!!! error TS1192: Module '"t4"' has no default export.
!!! related TS1195 t4.ts:2:1: 'export *' does not re-export a default.
    hello;
    x;
    y;
    z;
    foo;
    